--- a/task-3.html
+++ b/task-3.html
@@ -10,9 +10,16 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <input type="text" id="name-input" placeholder="Please enter your name" />
-    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+    <input
+      type="text"
+      id="name-input"
+      placeholder="Please enter your name"
+      class="input-form"
+    />
+    <h1 class="output-greeting">
+      Hello, <span id="name-output">Anonymous</span>!
+    </h1>
 
-    <!-- <script src="./js/task-3.js" type="module"></script> -->
+    <script src="./js/task-3.js" type="module"></script>
   </body>
 </html>
