--- a/task-4.html
+++ b/task-4.html
@@ -11,17 +11,17 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="label">
         Email
-        <input type="email" name="email" />
+        <input type="email" name="email" class="input-email" />
       </label>
-      <label>
+      <label class="label">
         Password
-        <input type="password" name="password" />
+        <input type="password" name="password" class="input-password" />
       </label>
-      <button type="submit">Login</button>
+      <button type="submit" class="btn">Login</button>
     </form>
 
-    <!-- <script src="./js/task-4.js" type="module"></script> -->
+    <script src="./js/task-4.js" type="module"></script>
   </body>
 </html>
